--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head> </head>
   <body>
-    <a href="index.html" target="myframe">MyWebsite</a>
+    <a href="index-1.html" target="myframe">MyWebsite</a>
     <h1>Mohammed Al Marri</h1>
     <br><br>
     <h1>My first web site</h1>
