--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </a>
 
     <div class="card" style="width: 18rem;">
-      <img src="mohammed_abdu.jpeg" class="card-img-top" alt="alert" />
+      <img src="https://github.com/mohammedalmarri/mohammedalmarri/blob/master/mohammed_abdu.jpeg" class="card-img-top" alt="alert" />
       <div class="card-body">
         <h5 class="card-title">Mohammed Abdu</h5>
         <p class="card-text">
